syntax = "proto3";
option java_multiple_files = true;
option java_package = "proto.dtos.donacion";

package proto.dtos;

import "dtos/categoria.proto";

message CrearDonacionProto {
  int64 idEventoSolidario = 1;
  int32 cantidad = 2;
  int64 idInventario = 3;
}

message DonacionProto {
  CategoriaProto categoria = 1;
  int32 cantidad = 2;
  string descripcion = 3;
}