syntax = "proto3";
option java_multiple_files = true;

package proto.dtos;

import "dtos/categoria.proto";

message CrearInventarioProto {
	CategoriaProto categoria = 1;
	string descripcion = 2;
	int32 cantidad = 3;
}

message ModificarInventarioProto {
	string descripcion = 1;
	int32 cantidad = 2;
}

message InventarioProto {
	CategoriaProto categoria = 1;
	string descripcion = 2;
	int32 cantidad = 3;
	bool eliminado = 4;
}